--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -46,6 +46,7 @@
 .height {
   display: flex;
   gap: 5px;
+  
 }
 
 .show-input-values {
@@ -61,7 +62,7 @@
 .ques-1-answer {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 25px;
   margin: 20px 10px;
@@ -130,14 +131,15 @@ input[type="number"]:focus-visible {
   display: flex;
   align-items: center;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   color: #333;
   margin-top: 15px;
+  justify-content: space-evenly;
+  text-align: center;
 }
 
 .total-price>p {
   margin: 0px;
-  width: 49%;
 }
 
 .price {
@@ -156,7 +158,6 @@ input[type="number"]:focus-visible {
   display: flex;
   gap: 20px;
   overflow-x: auto;
-  /* Enables horizontal scrolling */
   padding: 10px 0;
   max-width: 100%;
 }
@@ -180,7 +181,6 @@ input[type="number"]:focus-visible {
 
 .products {
   flex: 0 0 auto;
-  /* Prevents products from wrapping to a new line */
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -211,23 +211,15 @@ input[type="number"]:focus-visible {
 .product-price>h1 {
   font-size: large;
   color: black;
-  /* margin: 13px 0px -30px 0px; */
 }
 
-.insulation-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: start;
-  margin-top: 20px;
-}
-
-.runtime-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: start;
-  margin-top: 20px;
+.insulation-options, .runtime-options {
+  display: grid;
+  gap: 15px;
+  margin-top: 10px;
+  grid-template-columns: 25% 25% 25% 25%;
+  justify-content: center;
+  padding: 0 20px;
 }
 
 .insulation-option.selected {
@@ -240,26 +232,23 @@ input[type="number"]:focus-visible {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 180px;
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0 2px 4px #0000001a;
   transition: background-color .3s ease;
   border: 2px solid blue;
-  /* Different color for selected */
   border-radius: 5px;
 }
 
 .runtimeOption-details {
   font-size: small;
 }
-
 .insulation-option {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 180px;
+  width: 100%;
   padding: 15px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -270,7 +259,6 @@ input[type="number"]:focus-visible {
 .runtimeOption-details label {
   display: flex;
   align-items: center;
-  /* font-size: 14px; */
   color: #555;
   justify-content: center;
   font-size: small;
@@ -452,32 +440,21 @@ p:last-child {
 }
 
 @media screen and (max-width: 1024px) {
-
-  .insulation-options,
-  .runtime-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: start;
-    margin-top: 10px;
-  }
-
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 160px;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
-  }
-
   .total-price>p {
     margin: 0;
-    width: 64%;
+  }
+}
+@media screen and (max-width: 989px){
+  .insulation-options, .runtime-options {
+    grid-template-columns: 50% 50%;
+    padding: 0;
+}
+  .length, .width, .height {
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -508,36 +485,13 @@ p:last-child {
     border-radius: 8px;
     box-shadow: 0 2px 4px #0000001a;
   }
-
   .ques-1-answer {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     margin: 20px 10px;
-  }
-
-  .insulation-options,
-  .runtime-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    margin-top: 20px;
-  }
-
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 170px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
   }
 
   .totalvolumeValue {
@@ -580,18 +534,18 @@ p:last-child {
     padding: 10px;
   }
 
-  .total-price {
+  /* .total-price {
     display: flex;
     align-items: center;
     font-size: 18px;
     font-weight: 700;
     color: #333;
     margin-top: 15px;
-  }
+  } */
 
   .total-price>p {
     margin: 0;
-    width: 55%;
+    /* width: 55%; */
   }
 
   .price {
@@ -628,8 +582,6 @@ p:last-child {
   }
 }
 
-
-
 @media screen and (max-width: 425px) {
 
   .ques-1-container,
@@ -646,44 +598,11 @@ p:last-child {
     box-shadow: 0 2px 4px #0000001a;
   }
 
-  .ques-1-answer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 25px;
-    margin: 20px 10px;
-    flex-wrap: wrap;
-  }
-
-  .insulation-options,
-  .runtime-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: start;
-    margin-top: 20px;
-  }
-
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 170px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
-  }
-
   .runtime-selected {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 170px;
     padding: 5px;
     box-shadow: 0 2px 4px #0000001a;
     transition: background-color .3s ease;
@@ -725,13 +644,8 @@ p:last-child {
     margin: 0px 34%;
     text-align: center;
   }
-
   .total-price {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    color: #333;
-    margin-top: 15px;
+    flex-direction: column!important;
   }
 
   .total-price>p {
@@ -753,11 +667,6 @@ p:last-child {
     margin: 0px;
   }
 }
-
-
-
-
-
 
 @media screen and (max-width: 375px) {
 
@@ -784,14 +693,16 @@ p:last-child {
     margin: 0px 5px;
     font-size: 15px;
   }
-
+  input[type=number] {
+    width: 100%;
+  } 
   .ques-1-answer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 4px;
-  }
+  } 
 
   .totalvolumeValue {
     display: flex;
@@ -807,25 +718,11 @@ p:last-child {
     width: 100%;
   }
 
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 150px;
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
-  }
-
   .runtime-selected {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 150px;
     padding: 8px;
     border: 2px solid blue;
     border-radius: 8px;
@@ -848,13 +745,6 @@ p:last-child {
     color: #000;
     font-size: large;
     font-weight: 600;
-  }
-
-  .total-price {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    color: #333;
   }
 
   .price {
@@ -901,35 +791,11 @@ p:last-child {
     gap: 4px;
   }
 
-
-  .insulation-options,
-  .runtime-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: start;
-    margin-top: 15px;
-  }
-
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 126px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
-  }
-
   .runtime-selected {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 126px;
     padding: 5px;
     box-shadow: 0 2px 4px #0000001a;
     transition: background-color .3s ease;
@@ -1001,20 +867,12 @@ p:last-child {
     margin: 0 0px;
   }
 
-
-  .total-price {
-    display: block;
-    font-size: 18px;
-    font-weight: 700;
-    color: #333;
-  }
-
   .price {
     font-size: 1.3rem;
     letter-spacing: .1rem;
     line-height: calc(1 + .5 / var(--font-body-scale));
     color: rgb(var(--color-foreground));
-    margin: 0px 0px 0px 100px;
+    margin: 0px 0px 0px 0px;
   }
 
 
@@ -1086,34 +944,11 @@ p:last-child {
     font-size: 13px;
   }
 
-  .insulation-options,
-  .runtime-options {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    justify-content: center;
-    margin-top: 10px;
-  }
-
-  .insulation-option {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 165px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
-    transition: background-color .3s ease;
-  }
-
   .runtime-selected {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 165px;
     padding: 5px;
     box-shadow: 0 2px 4px #0000001a;
     transition: background-color .3s ease;
