--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -7,8 +7,8 @@
 .question-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 10px;
+  margin-bottom: 0px;
 }
 
 .ques-1-container,
@@ -20,13 +20,9 @@
 .ques-7-container,
 .ques-8-container {
   background-color: #f5f5f5;
-  padding: 20px;
+  padding: 5px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.ques-wrapper {
-  overflow-x: scroll;
+  box-shadow: 0 2px 4px #0000001a;
 }
 
 .ques-1 h1,
@@ -38,20 +34,35 @@
 .ques-7 h1,
 .ques-8 h1 {
   font-size: x-large;
-  color: black;
+  color: #000;
+  margin: 0px 0px 5px 0px;
 }
 
-.length,
-.width,
-.height {
+.ques-1-description,
+.ques-2-description,
+.ques-4-description,
+.ques-5-description,
+.ques-6-description,
+.ques-7-description,
+.ques-8-description {
+  color: #555;
+  margin: 0px 0px 0px 25px;
+  font-size: 15px;
+}
+
+.ques-1-answer {
   display: flex;
-  gap: 5px;
-  
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin: 5px 0px;
 }
 
 .show-input-values {
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
 .unit {
@@ -59,14 +70,172 @@
 }
 
 
-.ques-1-answer {
+.length,
+.width,
+.height {
   display: flex;
-  flex-direction: row;
+  gap: 5px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 25px;
-  margin: 20px 10px;
 }
+
+.calculate-volume {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+  justify-content: center;
+}
+
+.totalvolumeValue {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 100px;
+  font-size: 18px;
+  margin: 5px 0px 0px 0px;
+  font-weight: 700;
+}
+
+
+.insulation-options,
+.runtime-options {
+  display: grid;
+  gap: 5px;
+  margin: 15px;
+  grid-template-columns: 25% 25% 25% 25%;
+  justify-content: center;
+  padding: 0px 30px;
+}
+
+.insulation-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 6px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px #0000001a;
+  transition: background-color .3s ease;
+}
+
+.option-desc {
+  font-size: 15px;
+  color: #777;
+  margin: 0px;
+}
+
+.insulation-option.selected {
+  border: 2px solid blue;
+  border-radius: 5px;
+}
+
+.runtime-selected {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px #0000001a;
+  transition: background-color .3s ease;
+  border: 2px solid blue;
+  border-radius: 5px;
+}
+
+.runtimeOption-details label {
+  display: flex;
+  align-items: center;
+  color: #555;
+  justify-content: center;
+  font-size: small;
+  margin-top: 5px;
+}
+
+.insulation-option:hover {
+  background-color: #f9f9f9;
+  cursor: pointer;
+}
+
+.option-image {
+  width: 155px;
+  height: 110px;
+  border-radius: 4px;
+}
+
+.option-details label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #555;
+  justify-content: center;
+  font-size: small;
+}
+
+.displayBTU,
+.harvest-result,
+.recommendedWatts {
+  margin: 0px 0 0 25px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+
+.collection-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 0px;
+}
+
+.collection-products {
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+  padding: 10px 30px;
+  max-width: 100%;
+}
+
+.products {
+  flex: 0 0 auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px #0000001a;
+  padding: 5px;
+  text-align: center;
+  background-color: #fff;
+  width: 180px;
+  transition: background-color .3s ease;
+}
+
+.products:hover {
+  background-color: #f9f9f9;
+  cursor: pointer;
+}
+
+.title h1 {
+  font-size: 16px;
+  color: #555;
+}
+
+.productsImage img {
+  border-radius: 4px;
+  max-width: 100%;
+  height: auto;
+}
+
+.product-price>h1 {
+  font-size: large;
+  color: black;
+}
+
+
+.build-kit-message>p {
+  margin: 0px 0px 0px 35px;
+}
+
 
 input[type='number'] {
   padding: 8px;
@@ -96,36 +265,18 @@ input[type="number"]:focus-visible {
   outline: none;
 }
 
-.calculate-volume {
+
+.pannel-battery-distance,
+.battery-HVAC-distance {
   display: flex;
-  align-items: center;
-  gap: 15px;
+  justify-content: start;
+  gap: 20px;
+  margin: 3px 25px;
 }
 
-.loader {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 1s linear infinite;
-  display: inline-block;
+.distance-question>p {
+  color: black;
 }
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.cartButton:hover {
-  background-color: #0056b3;
-}
-
 
 .total-price {
   display: flex;
@@ -140,187 +291,18 @@ input[type="number"]:focus-visible {
 
 .total-price>p {
   margin: 0px;
+  width: 50%;
 }
 
 .price {
   font-size: 25px;
   color: black;
-  margin-left: 10px;
 }
 
-.collection-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.collection-products {
-  display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  padding: 10px 0;
-  max-width: 100%;
-}
-
-.collection-products::-webkit-scrollbar {
-  height: 8px;
-}
-
-.collection-products::-webkit-scrollbar-thumb {
-  background-color: #cccccc;
-  border-radius: 4px;
-}
-
-.ques-2-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: start;
-  flex-direction: column;
-}
-
-.products {
-  flex: 0 0 auto;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 15px;
-  text-align: center;
-  background-color: #fff;
-  width: 180px;
-  transition: background-color 0.3s ease;
-}
-
-.products:hover {
-  background-color: #f9f9f9;
-  cursor: pointer;
-}
-
-.productsImage img {
-  border-radius: 4px;
-  max-width: 100%;
-  height: auto;
-}
-
-.title h1 {
-  font-size: 16px;
-
-  color: #555;
-}
-
-.product-price>h1 {
-  font-size: large;
-  color: black;
-}
-
-.insulation-options, .runtime-options {
-  display: grid;
-  gap: 15px;
-  margin-top: 10px;
-  grid-template-columns: 25% 25% 25% 25%;
-  justify-content: center;
-  padding: 0 20px;
-}
-
-.insulation-option.selected {
-  border: 2px solid blue;
-  border-radius: 5px;
-}
-
-.runtime-selected {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px #0000001a;
-  transition: background-color .3s ease;
-  border: 2px solid blue;
-  border-radius: 5px;
-}
-
-.runtimeOption-details {
-  font-size: small;
-}
-.insulation-option {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease;
-}
-
-.runtimeOption-details label {
-  display: flex;
-  align-items: center;
-  color: #555;
-  justify-content: center;
-  font-size: small;
-  margin-top: 5px;
-}
-
-.ques-1-description,
-.ques-2-description,
-.ques-4-description,
-.ques-5-description,
-.ques-6-description,
-.ques-7-description,
-.ques-8-description {
-  color: #555;
-  margin: 10px 30px;
-  font-size: large;
-}
-
-
-.insulation-option:hover {
-  background-color: #f9f9f9;
-  cursor: pointer;
-}
-
-.option-image {
-  width: 155px;
-  height: 110px;
-  border-radius: 4px;
-}
-
-.option-details label {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  color: #555;
-  justify-content: center;
-  font-size: small;
-}
-
-.option-desc {
-  font-size: 15px;
-  color: #777;
-  margin-top: 5px;
-}
-
-.harvest-result {
-  font-size: 18px;
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-.pannel-battery-distance,
-.battery-HVAC-distance {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 20px;
-  margin: 0px 30px;
-}
 
 .cart-button-container {
   text-align: center;
+  margin-top: 20px;
 }
 
 .cartButton {
@@ -356,27 +338,34 @@ input[type="number"]:focus-visible {
   background-color: black;
 }
 
-.displayBTU {
-  margin: 10px 0px 0px 10px;
-  font-size: 18px;
-  font-weight: 700;
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
-.totalvolumeValue {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 100px;
-  font-size: 18px;
-  margin-top: 10px;
-  font-weight: 700;
+.collection-products::-webkit-scrollbar {
+  height: 8px;
 }
 
-.recommendedWatts {
-  font-size: 18px;
-  font-weight: 700;
+.collection-products::-webkit-scrollbar-thumb {
+  background-color: #cccccc;
+  border-radius: 4px;
 }
 
 .sub-ques {
@@ -388,10 +377,6 @@ input[type="number"]:focus-visible {
   color: #555;
   margin: 10px 30px;
   font-size: large;
-}
-
-.distance-question>p {
-  color: black;
 }
 
 p {
@@ -413,10 +398,27 @@ p:last-child {
   margin: 0px
 }
 
+/* ========================================================================== */
+
+
 
 
 /* Default desktop styles (already in your code) */
 @media screen and (max-width: 1200px) {
+
+  .ques-1-container,
+  .ques-2-container,
+  .ques-3-container,
+  .ques-4-container,
+  .ques-5-container,
+  .ques-6-container,
+  .ques-7-container,
+  .ques-8-container {
+    background-color: #f5f5f5;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px #0000001a;
+  }
 
   /* Adjustments for tablets */
   .product-image img {
@@ -434,6 +436,22 @@ p:last-child {
     font-size: 18px;
   }
 
+  .total-price {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 700;
+    color: #333;
+    margin-top: 15px;
+    justify-content: space-evenly;
+    /* text-align: center; */
+  }
+
+  .total-price>p {
+    margin: 0;
+    width: 50%;
+  }
+
   .button-primary {
     font-size: 14px;
   }
@@ -442,14 +460,21 @@ p:last-child {
 @media screen and (max-width: 1024px) {
   .total-price>p {
     margin: 0;
+    width: 65%;
   }
 }
-@media screen and (max-width: 989px){
-  .insulation-options, .runtime-options {
+
+@media screen and (max-width: 989px) {
+
+  .insulation-options,
+  .runtime-options {
     grid-template-columns: 50% 50%;
     padding: 0;
-}
-  .length, .width, .height {
+  }
+
+  .length,
+  .width,
+  .height {
     display: flex;
     gap: 5px;
     flex-direction: column;
@@ -485,6 +510,7 @@ p:last-child {
     border-radius: 8px;
     box-shadow: 0 2px 4px #0000001a;
   }
+
   .ques-1-answer {
     display: flex;
     flex-direction: row;
@@ -534,18 +560,19 @@ p:last-child {
     padding: 10px;
   }
 
-  /* .total-price {
+  .total-price {
     display: flex;
     align-items: center;
     font-size: 18px;
     font-weight: 700;
     color: #333;
     margin-top: 15px;
-  } */
+    justify-content: start;
+  }
 
   .total-price>p {
     margin: 0;
-    /* width: 55%; */
+    width: auto;
   }
 
   .price {
@@ -644,8 +671,9 @@ p:last-child {
     margin: 0px 34%;
     text-align: center;
   }
+
   .total-price {
-    flex-direction: column!important;
+    flex-direction: column !important;
   }
 
   .total-price>p {
@@ -693,16 +721,18 @@ p:last-child {
     margin: 0px 5px;
     font-size: 15px;
   }
+
   input[type=number] {
     width: 100%;
-  } 
+  }
+
   .ques-1-answer {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     gap: 4px;
-  } 
+  }
 
   .totalvolumeValue {
     display: flex;
@@ -767,7 +797,7 @@ p:last-child {
   .ques-6 h1,
   .ques-7 h1,
   .ques-8 h1 {
-    font-size: 19px;
+    font-size: 17px;
     color: #000;
   }
 
@@ -789,6 +819,30 @@ p:last-child {
     justify-content: center;
     align-items: center;
     gap: 4px;
+    margin: 4px;
+  }
+
+  .insulation-option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 0px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px #0000001a;
+    transition: background-color .3s ease;
+  }
+
+  .insulation-options,
+  .runtime-options {
+    display: grid;
+    gap: 5px;
+    margin: 5px;
+    grid-template-columns: 25% 25% 25% 25%;
+    justify-content: center;
+    padding: 0 30px;
   }
 
   .runtime-selected {
@@ -819,7 +873,7 @@ p:last-child {
   }
 
   .option-desc {
-    font-size: 14px;
+    font-size: 13px;
     color: #777;
     margin-top: 0px;
   }
