--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -31,6 +31,15 @@ body {
   padding: 5px;
   border-radius: 8px;
   box-shadow: 0 2px 4px #0000001a;
+  position: relative;
+}
+
+.info-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #f0f0f0;
+  cursor: pointer;
 }
 
 .ques-1 h1,
@@ -213,6 +222,7 @@ body {
   background-color: #fff;
   width: 180px;
   transition: background-color 0.3s ease;
+  position: relative;
 }
 
 .products:hover {
@@ -231,12 +241,12 @@ body {
   height: auto;
 }
 
-.product-price > h1 {
+.product-price>h1 {
   font-size: large;
   color: black;
 }
 
-.build-kit-message > p {
+.build-kit-message>p {
   margin: 0px 0px 0px 35px;
 }
 
@@ -274,9 +284,10 @@ input[type="number"]:focus-visible {
   justify-content: start;
   gap: 20px;
   margin: 3px 25px;
+  align-items: center;
 }
 
-.distance-question > p {
+.distance-question>p {
   color: black;
 }
 
@@ -291,7 +302,7 @@ input[type="number"]:focus-visible {
   text-align: center;
 }
 
-.total-price > p {
+.total-price>p {
   margin: 0px;
   width: 50%;
 }
@@ -405,6 +416,7 @@ p:last-child {
 
 /* Default desktop styles (already in your code) */
 @media screen and (max-width: 1200px) {
+
   .ques-1-container,
   .ques-2-container,
   .ques-3-container,
@@ -446,7 +458,7 @@ p:last-child {
     /* text-align: center; */
   }
 
-  .total-price > p {
+  .total-price>p {
     margin: 0;
     width: 50%;
   }
@@ -457,13 +469,14 @@ p:last-child {
 }
 
 @media screen and (max-width: 1024px) {
-  .total-price > p {
+  .total-price>p {
     margin: 0;
     width: 65%;
   }
 }
 
 @media screen and (max-width: 989px) {
+
   .insulation-options,
   .runtime-options {
     grid-template-columns: 50% 50%;
@@ -482,6 +495,7 @@ p:last-child {
 }
 
 @media screen and (max-width: 768px) {
+
   .ques-1-description,
   .ques-2-description,
   .ques-4-description,
@@ -567,7 +581,7 @@ p:last-child {
     justify-content: start;
   }
 
-  .total-price > p {
+  .total-price>p {
     margin: 0;
     width: auto;
   }
@@ -610,6 +624,7 @@ p:last-child {
 }
 
 @media screen and (max-width: 425px) {
+
   .ques-1-container,
   .ques-2-container,
   .ques-3-container,
@@ -677,7 +692,7 @@ p:last-child {
     flex-direction: column !important;
   }
 
-  .total-price > p {
+  .total-price>p {
     margin: 0;
     width: 100%;
     text-align: center;
@@ -691,13 +706,14 @@ p:last-child {
     width: 100%;
   }
 
-  .build-kit-message > p {
+  .build-kit-message>p {
     width: 95%;
     margin: 0px;
   }
 }
 
 @media screen and (max-width: 375px) {
+
   .ques-1 h1,
   .ques-2 h1,
   .ques-3 h1,
@@ -763,7 +779,7 @@ p:last-child {
     font-size: 14px;
   }
 
-  .build-kit-message > p {
+  .build-kit-message>p {
     width: 100%;
     font-size: 15px;
   }
@@ -829,6 +845,7 @@ p:last-child {
 }
 
 @media screen and (max-width: 320px) {
+
   .ques-1 h1,
   .ques-2 h1,
   .ques-3 h1,
@@ -928,7 +945,7 @@ p:last-child {
     font-weight: 700;
   }
 
-  .build-kit-message > p {
+  .build-kit-message>p {
     width: 100%;
   }
 
@@ -992,6 +1009,7 @@ p:last-child {
 }
 
 @media screen and (max-width: 250px) {
+
   .ques-1 h1,
   .ques-2 h1,
   .ques-3 h1,
@@ -1059,7 +1077,7 @@ p:last-child {
     font-weight: 700;
   }
 
-  .build-kit-message > p {
+  .build-kit-message>p {
     width: 100%;
   }
 
