--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -412,6 +412,15 @@ p:last-child {
   margin: 0px;
 }
 
+.float-container {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10px;
+  background-color: #fff;
+  z-index: 10;
+  padding: 10px;
+}
+
 /* ========================================================================== */
 
 /* Default desktop styles (already in your code) */
