--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -18,8 +18,6 @@ body {
   gap: 10px;
   margin-bottom: 0px;
   height: 100%;
-  max-height: 800px;
-  overflow-y: scroll;
 }
 
 .ques-1-container,
@@ -301,21 +299,19 @@ input[type="number"]:focus-visible {
 .total-price {
   display: flex;
   align-items: center;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   color: #333;
   margin-top: 15px;
   justify-content: space-evenly;
-  text-align: center;
 }
 
 .total-price>p {
   margin: 0px;
-  width: 50%;
+  width: 14%;
 }
 
 .price {
-  font-size: 25px;
   color: black;
 }
 
@@ -420,12 +416,15 @@ p:last-child {
 }
 
 .float-container {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 10px;
   background-color: #fff;
-  z-index: 10;
   padding: 10px;
+}
+
+.float-container-body {
+  display: none;
+  position: sticky;
+  bottom: 0;
+  border: 1px solid black;
 }
 
 /* ========================================================================== */
