--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -308,7 +308,8 @@ input[type="number"]:focus-visible {
 
 .total-price>p {
   margin: 0px;
-  width: 14%;
+  /* width: 14%; */
+  width: 50%;
 }
 
 .price {
@@ -354,6 +355,7 @@ input[type="number"]:focus-visible {
   cursor: not-allowed;
   opacity: 0.5;
   background-color: black;
+  width: 40%;
 }
 
 .loader {
@@ -424,9 +426,40 @@ p:last-child {
   display: none;
   position: sticky;
   bottom: 0;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
-
+.custom-cart_btn .cart-button-container {
+  text-align: right;
+  padding-right: 12rem;
+  margin: 0;
+  /* padding-bottom: 1rem; */
+  width: 50%;
+  /* margin-right: 0px; */
+}
+.cart-btn .total-price {
+  width: 50%;
+}
+.custom-cart_btn .cartButton {
+  width: max-content;
+  border: 2px solid #fff;
+  opacity: 1 !important;
+  color: #fff;
+}
+.cart-btn {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+.custom-cart_btn {
+  background: #000;
+}
+.custom-cart_btn .price{
+  color: #fff;
+}
+.custom-cart_btn p {
+  color: #fff;
+}
 /* ========================================================================== */
 
 /* Default desktop styles (already in your code) */
@@ -491,7 +524,12 @@ p:last-child {
 }
 
 @media screen and (max-width: 989px) {
-
+  .custom-cart_btn .cartButton {
+    width: max-content;
+}
+.custom-cart_btn .cart-button-container {
+  text-align: center;
+}
   .insulation-options,
   .runtime-options {
     grid-template-columns: 50% 50%;
@@ -593,7 +631,7 @@ p:last-child {
     font-weight: 700;
     color: #333;
     margin-top: 15px;
-    justify-content: start;
+    justify-content: center;
   }
 
   .total-price>p {
@@ -634,12 +672,23 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    width: 50%;
+    /* width: 50%; */
   }
 }
 
 @media screen and (max-width: 425px) {
-
+  .cart-btn {
+    flex-direction: column;
+    gap:1rem;
+}
+.cart-btn .total-price {
+  width: 100%;
+  justify-content: center;
+}
+.custom-cart_btn .cart-button-container {
+  text-align: center;
+  padding-right: 0;
+}
   .ques-1-container,
   .ques-2-container,
   .ques-3-container,
@@ -693,7 +742,7 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    width: 60%;
+    /* width: 60%; */
   }
 
   .price {
@@ -838,7 +887,7 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    width: 45%;
+    /* width: 45%; */
   }
 
   .recommendedWatts-value {
@@ -1019,7 +1068,7 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    width: 70%;
+    /* width: 70%; */
   }
 }
 
