--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -296,6 +296,7 @@ input[type="number"]:focus-visible {
   color: black;
 }
 
+
 .total-price {
   display: flex;
   align-items: center;
@@ -303,13 +304,14 @@ input[type="number"]:focus-visible {
   font-weight: 700;
   color: #333;
   margin-top: 15px;
-  justify-content: space-evenly;
+  justify-content: start;
+  gap: 8px;
 }
+
 
 .total-price>p {
   margin: 0px;
-  /* width: 14%; */
-  width: 50%;
+  width: 14%;
 }
 
 .price {
@@ -425,41 +427,58 @@ p:last-child {
 .float-container-body {
   display: none;
   position: sticky;
-  bottom: 0;
-  /* border: 1px solid black; */
+  bottom: 20px;
+  justify-content: center;
+  align-items: center;
 }
+
+
 .custom-cart_btn .cart-button-container {
   text-align: right;
   padding-right: 12rem;
   margin: 0;
-  /* padding-bottom: 1rem; */
   width: 50%;
-  /* margin-right: 0px; */
 }
+
 .cart-btn .total-price {
-  width: 50%;
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 700;
+  color: #4d2d2d;
+  margin: 0px 0px 0px 44%;
+  justify-content: flex-end;
+  gap: 0px;
 }
+
 .custom-cart_btn .cartButton {
   width: max-content;
   border: 2px solid #fff;
   opacity: 1 !important;
   color: #fff;
 }
+
 .cart-btn {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
   padding: 0.5rem 1rem;
+  width: 100%;
 }
+
 .custom-cart_btn {
-  background: #000;
+  background: #a7bcd385;
 }
-.custom-cart_btn .price{
-  color: #fff;
+
+.custom-cart_btn .price {
+  color: 000000;
 }
+
 .custom-cart_btn p {
-  color: #fff;
+  color: #000000;
+  width: 260px;
 }
+
 /* ========================================================================== */
 
 /* Default desktop styles (already in your code) */
@@ -519,17 +538,24 @@ p:last-child {
 @media screen and (max-width: 1024px) {
   .total-price>p {
     margin: 0;
-    width: 65%;
+    width: 16%;
+  }
+
+  .custom-cart_btn p {
+    color: #000;
+    width: 260px;
   }
 }
 
 @media screen and (max-width: 989px) {
   .custom-cart_btn .cartButton {
     width: max-content;
-}
-.custom-cart_btn .cart-button-container {
-  text-align: center;
-}
+  }
+
+  .custom-cart_btn .cart-button-container {
+    text-align: center;
+  }
+
   .insulation-options,
   .runtime-options {
     grid-template-columns: 50% 50%;
@@ -674,21 +700,43 @@ p:last-child {
     background-color: #000;
     /* width: 50%; */
   }
+
+  .custom-cart_btn p {
+    color: #000;
+    width: max-content;
+  }
+
+  .cart-btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: .5rem 1rem;
+    width: 100%;
+    gap: 70px;
+  }
+
+
 }
 
 @media screen and (max-width: 425px) {
   .cart-btn {
     flex-direction: column;
-    gap:1rem;
-}
-.cart-btn .total-price {
-  width: 100%;
-  justify-content: center;
-}
-.custom-cart_btn .cart-button-container {
-  text-align: center;
-  padding-right: 0;
-}
+    gap: 1rem;
+  }
+
+  .cart-btn .total-price {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 0 0%;
+  }
+
+  .custom-cart_btn .cart-button-container {
+    text-align: center;
+    padding-right: 0;
+  }
+
   .ques-1-container,
   .ques-2-container,
   .ques-3-container,
@@ -774,6 +822,19 @@ p:last-child {
     width: 95%;
     margin: 0px;
   }
+
+  .custom-cart-button {
+    width: max-content;
+  }
+
+  .custom-cart-button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    background-color: #000;
+    width: max-content;
+  }
+
+
 }
 
 @media screen and (max-width: 375px) {
@@ -887,7 +948,7 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    /* width: 45%; */
+    width: 70%;
   }
 
   .recommendedWatts-value {
@@ -905,6 +966,17 @@ p:last-child {
     letter-spacing: 0.1rem;
     line-height: calc(1 + 0.5 / var(--font-body-scale));
     color: rgb(var(--color-foreground));
+  }
+
+  .custom-cart-button {
+    width: max-content;
+  }
+
+  .custom-cart-button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    background-color: #000;
+    width: max-content;
   }
 }
 
@@ -1068,7 +1140,21 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    /* width: 70%; */
+    width: 70%;
+  }
+
+  .custom-cart-button {
+    cursor: not-allowed;
+    opacity: 0.5;
+    background-color: #000;
+    width: max-content;
+  }
+
+  .custom-cart-button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    background-color: #000;
+    width: max-content;
   }
 }
 
@@ -1183,5 +1269,12 @@ p:last-child {
     line-height: calc(1 + 0.5 / var(--font-body-scale));
     color: rgb(var(--color-foreground));
     margin: 0px 0 0 60px;
+  }
+
+  .custom-cart-button {
+    cursor: not-allowed;
+    opacity: 0.5;
+    background-color: #000;
+    width: max-content;
   }
 }
