--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -6,6 +6,14 @@ body {
   line-height: 1.3;
 }
 
+#ShopifyChat {
+  position: fixed !important;
+  bottom: 24px !important;
+  z-index: 2147483646 !important;
+  right: 16px !important;
+  height: 60px !important;
+}
+
 .App {
   text-align: center;
   padding: 20px;
@@ -197,9 +205,10 @@ body {
 .displayBTU,
 .harvest-result,
 .recommendedWatts {
-  margin: 0px 0 0 25px;
+  /* margin: 0px 0 0 25px; */
   font-size: 18px;
   font-weight: 700;
+  text-align: center;
 }
 
 .collection-container {
@@ -310,10 +319,14 @@ input[type="number"]:focus-visible {
 
 
 .total-price>p {
-  margin: 0px;
+  margin: 0;
   width: 14%;
+  
 }
+.cart-btn p{
+  color:#fff;
 
+}
 .price {
   color: black;
 }
@@ -427,17 +440,31 @@ p:last-child {
 .float-container-body {
   display: none;
   position: sticky;
-  bottom: 20px;
-  justify-content: center;
+  bottom: 0;
+  justify-content: space-between;
   align-items: center;
+  /* margin: auto; */
+  text-align: center;
+  /* background-color: #000; */
+  width: 100%;
+  /* max-width: 100%; */
+  border-radius: 5px 5px 0 0;
 }
 
+.cart-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem 1rem;
+  /* gap: 20px; */
+  width: 83.33333%;
+  background-color: #000;
+  margin: 0 auto;
+}
 
 .custom-cart_btn .cart-button-container {
   text-align: right;
-  padding-right: 12rem;
   margin: 0;
-  width: 50%;
 }
 
 .cart-btn .total-price {
@@ -445,10 +472,16 @@ p:last-child {
   align-items: center;
   font-size: 25px;
   font-weight: 700;
-  color: #4d2d2d;
-  margin: 0px 0px 0px 44%;
   justify-content: flex-end;
-  gap: 0px;
+  gap: 4px;
+  margin: 0px;
+}
+#ShopifyChat {
+  bottom: 70px!important;
+}
+.custom-cart_btn p {
+  color: #fffcfc!important;
+  width: 100%;
 }
 
 .custom-cart_btn .cartButton {
@@ -458,26 +491,12 @@ p:last-child {
   color: #fff;
 }
 
-.cart-btn {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0.5rem 1rem;
-  width: 100%;
+.custom-price {
+  color: #fff;
+  width: fit-content !important;
 }
 
-.custom-cart_btn {
-  background: #a7bcd385;
-}
 
-.custom-cart_btn .price {
-  color: 000000;
-}
-
-.custom-cart_btn p {
-  color: #000000;
-  width: 260px;
-}
 
 /* ========================================================================== */
 
@@ -527,7 +546,7 @@ p:last-child {
 
   .total-price>p {
     margin: 0;
-    width: 50%;
+    /* width: 50%; */
   }
 
   .button-primary {
@@ -536,15 +555,12 @@ p:last-child {
 }
 
 @media screen and (max-width: 1024px) {
+
   .total-price>p {
     margin: 0;
-    width: 16%;
+    /* width: 15%; */
   }
 
-  .custom-cart_btn p {
-    color: #000;
-    width: 260px;
-  }
 }
 
 @media screen and (max-width: 989px) {
@@ -572,7 +588,11 @@ p:last-child {
     align-items: center;
   }
 }
-
+@media screen and (min-width: 750px) and (max-width: 768px){
+  .cart-btn {
+    width: 83.33%!important;
+}
+}
 @media screen and (max-width: 768px) {
 
   .ques-1-description,
@@ -631,7 +651,6 @@ p:last-child {
     padding: 5px;
   }
 
-  /* Make inputs full width for mobile */
   .custom-wiring-input input {
     width: 100%;
     padding: 8px;
@@ -644,7 +663,6 @@ p:last-child {
     padding: 12px;
   }
 
-  /* Adjust button size */
   .button-primary {
     font-size: 16px;
     padding: 10px;
@@ -664,7 +682,12 @@ p:last-child {
     margin: 0;
     width: auto;
   }
-
+  .cart-btn p, .custom-price {
+    font-size: 20px!important;
+  }
+  .cart-btn .price {
+    color: #fff!important;
+  }
   .price {
     display: -webkit-box;
     font-size: 25px;
@@ -698,49 +721,36 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    /* width: 50%; */
+    /* width: 50%; */ 
   }
 
   .custom-cart_btn p {
-    color: #000;
     width: max-content;
   }
-
   .cart-btn {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    padding: .5rem 1rem;
+    padding: .5rem;
     width: 100%;
-    gap: 70px;
-  }
-
-
+    /* gap: 70px; */
 }
-
-@media (min-width: 425px) and (max-width: 615px) {
-  .cart-btn .total-price {
-    display: flex;
-    align-items: center;
-    font-size: 25px;
-    font-weight: 700;
-    color: #4d2d2d;
-    margin: 0px 0px 0px 0px;
-    justify-content: center;
-    gap: 0px;
-    flex-direction: column;
-  }
 }
 
 @media screen and (max-width: 425px) {
-  .cart-btn {
-    flex-direction: column;
-    gap: 1rem;
+  .ques-1-answer span {
+    font-size: 12px!important;
   }
-
+  .cart-btn {
+    /* flex-direction: column; */
+    /* gap: 1rem; */
+  }
+  .cart-btn p, .custom-price{
+    font-size: 18px!important;
+    color:#fff;
+  }
   .cart-btn .total-price {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     justify-content: center;
     align-items: center;
     margin: 0 0 0 0%;
@@ -787,7 +797,7 @@ p:last-child {
 
   .cartButton {
     width: 60%;
-    padding: 12px 20px;
+    padding: 10px;
     background-color: #1a1a1a;
     color: #fff;
     border: 2px solid transparent;
@@ -1030,7 +1040,7 @@ p:last-child {
     gap: 4px;
     margin: 4px;
   }
-
+ 
   .totalvolumeValue {
     display: flex;
     width: 100%;
@@ -1207,7 +1217,9 @@ p:last-child {
     align-items: center;
     gap: 2px;
   }
-
+  .ques-1-answer span {
+    font-size: 10px!important;
+  }
   .totalvolumeValue {
     display: flex;
     flex-direction: row;
